--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "yarn": "^1.22.19"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
