--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "firebase": "^9.9.0",
     "next": "12.2.0",
     "next-themes": "^0.2.0",
     "nodemailer": "^6.7.7",
