--- a/package.json
+++ b/package.json
@@ -16,21 +16,25 @@
     "test": ""
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.5",
-    "@heroicons/react": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.0",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.9",
     "next": "12.2.0",
     "next-themes": "^0.2.0",
     "nodemailer": "^6.7.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
